--- a/lithubs/static/lithubs/css/styles.css
+++ b/lithubs/static/lithubs/css/styles.css
@@ -1,11 +1,8 @@
 /* main */
 
 .main {
-  margin-top: 15%;
-}
-
-.main-header {
-  font-size: 60px;
+  margin-top: 15%; } .main-header {
+  font-size: 80px;
   font-weight: bold;
   color: white;
 }
@@ -80,3 +77,52 @@
 	left: 2%;
   }
 
+/* repositories */
+.repositories-header {
+	margin-top: 10%;
+	color: violet;
+	font-size: 30px;
+	}
+
+.repositories-container {
+	margin-top: 5%;
+	padding: 10px;
+}
+
+.repositories-title {
+	color: violet;
+	font-size: 25px;
+	text-decoration: none;
+}
+
+.repositories-title:hover {
+	color: white;
+}
+
+.repositories-sub-text {
+	color: white;
+}
+
+.repositories-sub-text1 {
+	margin-top: 3%;
+	color: white;
+}
+
+/* repository */
+.repository-title {
+	margin-top: 10%;
+	text-align: center;
+	color: white;
+}
+
+.repository-body {
+	margin-top: 5%;
+	text-align: center;
+	color: white;
+}
+
+.repository-empty {
+	margin-top: 5%;
+	text-align: center;
+	color: white;
+}
