--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -1,15 +1,12 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>LitHub</title>
-</head>
-<body>
+{% load bootstrap5 %}
+{% bootstrap_css %}
+
+<body id="bg"style="background-image:url('{% static "lithubs/img/space.jpg" %}'); background-repeat:no-repeat; background-size:cover;">
 <nav class="navbar navbar-expand-lg" style='background-color: none;'>
   <div class="container-fluid">
     <img src="{% static 'lithubs/img/parchment.png' %}" style='width: 50px'>
-    <a class="navbar-brand" style='color:white; font-size: 30px;' href="#">LitHub</a>
+    <a class="navbar-brand" style='color:white; font-size: 30px;' href="{% url 'lithubs:index' %}">LitHub</a>
     <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,6 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" style='color:white' href="#">Sign in</a>
         </li>
+        <li class="nav-item">
+		<a class="nav-link" style='color:white' href="{% url 'lithubs:repositories' %}">Repositories</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -30,6 +30,5 @@
   </div>
 </nav>
 </body>
-</html>
 
 {% block content%}{% endblock content %}
