--- a/lithubs/templates/lithubs/repositories.html
+++ b/lithubs/templates/lithubs/repositories.html
@@ -19,26 +19,16 @@
 
 </head>
 <body id="bg"style="background-image:url('{% static "lithubs/img/space.jpg" %}'); background-repeat:no-repeat; background-size:cover;">
-	<h1>New</h1>
-  <div class='repositories-container'>
-    {% for repository in repositories %}
-    <a href="{% url 'lithubs:repository' repository.id %}" class='repositories-title'>{{ repository.title }}</a>
-    <p class='repositories-sub-text'>{{ repository.synopsis  }}</p>
-    <div class='container-fluid-main'>
-      <div class='row'>
-        <div class='col-lg-6'>
+	{% for repository in repositories %}
+        <div class='repositories-page-container'>
+	  <h1 class='repositories-owner'>@{{ repository.owner }}</h1>
+    	  <a href="{% url 'lithubs:repository' repository.id %}" class='repositories-title'>{{ repository.title }}</a>
+    	  <p class='repositories-sub-text'>{{ repository.synopsis  }}</p>
 	  <p class='repositories-sub-text1'>🟠 {{ repository.genre  }}</p>
-        </div>
-        <div class='col-lg-6'>
 	  <p class='repositories-sub-text1'> {{ repository.update  }}</p>
+	 <hr style='color:white; margin-left:10%; margin-right: 10%; margin-top: 5%;'>
         </div>
-      </div>
-    </div>
-    <hr style='color: white;'>
-    {% empty %}
-    <h1>No repositories have been created</h1>
-    {% endfor %}
-  </div>
+ 	{% endfor %}
 
 </body>
 </html>
