--- a/lithubs/templates/lithubs/index.html
+++ b/lithubs/templates/lithubs/index.html
@@ -89,8 +89,8 @@
       </div>
     </div>
   </div>
- 
-
+  <h1 id='quote'></h1>
 </body>
+<script type='text/javascript' src="{% static 'lithubs/js/index.js' %}"></script>
 </html>
 {% endblock content  %}
