--- a/lithubs/templates/lithubs/profile_nav.html
+++ b/lithubs/templates/lithubs/profile_nav.html
@@ -12,28 +12,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-	{% if user.is_authenticated %}
         <li class="nav-item">
-	  <a class="nav-link active" style='color: white' aria-current="page" href="#">{{ user.username }}</a>
+	  <a class="nav-link active" style='color: white' aria-current="page" href="{% url 'lithubs:new_repository' %}">Create</a>
         </li>
         <li class="nav-item">
 	  <a class="nav-link" style='color:white' href="{% url 'lithubs:repositories' %}">Repositories</a>
         </li>
         <li class="nav-item">
-	  <a class="nav-link" style='color:white' href="{% url 'users:logout' %}">Log out</a>
-        </li>
-	{% else %}
-        <li class="nav-item">
-		<a class="nav-link active" style='color: white' aria-current="page" href="{% url  'users:register' %}">Register</a>
-        </li>
-        <li class="nav-item">
-		<a class="nav-link active" style='color: white' aria-current="page" href="{% url  'users:login' %}">Log in</a>
-        </li>
-        <li class="nav-item">
-	  <a class="nav-link" style='color:white' href="{% url 'lithubs:repositories' %}">Repositories</a>
+		<a class="nav-link" style='color:white' href="{% url 'users:logout' %}">Log out</a>
         </li>
       </ul>
-      {% endif %}
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
