--- a/lithubs/templates/lithubs/explore.html
+++ b/lithubs/templates/lithubs/explore.html
@@ -1,5 +1,9 @@
 {% extends 'lithubs/main.html' %}
+{% load static %}
 
 {% block content %}
+
+{% include 'lithubs/activity.html' %}
+
 
 {% endblock content %}
