--- a/lithubs/static/lithubs/css/styles.css
+++ b/lithubs/static/lithubs/css/styles.css
@@ -83,7 +83,6 @@
 .repo-container {
 	margin-top: 10%;
 	display: grid;
-	grid-template-columns: 1fr 3fr;
 	color: white;
 }
 
@@ -91,30 +90,39 @@
 	color: white;
 }
 
-.repo-owner {
-	text-align: center;
-	margin-top: 4%;
-	font-size: 18px;
-}
 
 .repo-form-created {
 	display: grid;
 	grid-template-columns: 3fr 1fr;
 }
 
+#repo-owner {
+	color: orange;
+	font-size: 20px;
+}
+
+#repo-edit {
+	font-size: 12px;
+}
+
 .repos {
+	margin:0 auto;
 	border: 2px solid grey;
-	padding: 38px;
 	border-radius: 12px;
 	width: 90%;
-	margin-top:3%;
+	background-color: #222831;
+	padding: 12px;
 	
 }
 
 .repos a {
 	text-decoration: none;
 	color: white;
-	font-size: 20px;
+	font-size: 18px;
+}
+
+.repos p {
+	font-size: 14px;
 }
 
 .repos h4 {
@@ -122,8 +130,13 @@
 }
 
 .activity-header {
+	margin:5% auto;
 	text-align: center;
-	color: orange;
+	color: white;
+	padding: 40px;
+	background-color: #222831;
+	border: .25px solid white;
+
 }
 
 	/* profile */
@@ -135,4 +148,14 @@
 	border: 2px solid white;
 }
 
-/* Repository Form */
+/*.explore-container {
+	margin: 5% auto;
+	background-color: #222831;
+	padding: 40px;
+	border: 1px solid white;
+}*/
+
+/*.explore-container h1, p {
+	color: white;
+	text-align: center;
+}*/
