--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -16,6 +16,9 @@
 	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white' href="">Explore</a>
         </li>
         <li class="nav-item">
+	 <a href="{% url 'lithubs:rooms' %}"class="nav-link" style='color:white' href="">Rooms</a>
+        </li>
+        <li class="nav-item">
 		<a class="nav-link" style='color:white' href="">Repositories</a>
         </li>
         <li class="nav-item">
