--- a/lithubs/templates/lithubs/activity.html
+++ b/lithubs/templates/lithubs/activity.html
@@ -7,14 +7,7 @@
   <p style="color:white; text-align: center; margin-top: 1%;">See whats trending in the LitHub community</p>
 </div>
 
-<div style="display: grid; grid-template-columns: 1fr 3fr;">
-	<div class="activity-browse-container">
-	<h3>Browse</h3>
-	{% for repo in norepeats %}
-	<a style="display:block;"href="{% url 'lithubs:explore' %}?={{ repo.genre }}">{{ repo.genre }}</a>
-	{% endfor %}
-	</div>
-	<div>
+<div class="activity-wrapper">
 		{% for repo in repos %}
 		<div class="activity-container">
 			<span>@{{ repo.user }}</span>
@@ -23,16 +16,19 @@
 			<p>🟣 {{ repo.genre }}</p>
 
 			<div style="display:grid; grid-template-columns: 3fr 1fr;">
-					<div>
-				<p>🟠 {{ repo.form }}</p>
-					</div>
-					<div>
-				<p>{{ repo.created|timesince }} ago</p>
-					</div>
+
+			<div>
+			<p>🟠 {{ repo.form }}</p>
+			<a href="{% url 'lithubs:update-repository' repo.id %}">Edit</a>
+			<a href="{% url 'lithubs:delete-repository' repo.id %}">delete</a>
+			</div>
+					
+			<div>
+			  <p>{{ repo.created|timesince }} ago</p>
+			</div>
 			</div>
 		</div>
 		{% endfor %}
-	</div>
 
 </div>
 
