--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
 	 <a href=""class="nav-link" style='color:white'>Login</a>
         </li>
+        <li class="nav-item">
+	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
