--- a/lithubs/templates/lithubs/explore.html
+++ b/lithubs/templates/lithubs/explore.html
@@ -12,7 +12,7 @@
 <div class="explore-feed-wrapper">
 	  <p>@{{ repo.user }}</p>
 	  <p>{{ repo.title }}</p>
-	  <p>{{ repo.synopsis }}</p>
+	  <p class="explore-feed-synopsis">{{ repo.synopsis }}</p>
 	  <p>🟠 {{ repo.genre }}</p>
 
 	  <div class="explore-form-created">
