--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -13,7 +13,7 @@
 	 <a href=""class="nav-link" style='color:white'>Sign up</a>
         </li>
         <li class="nav-item">
-	 <a href=""class="nav-link" style='color:white'>Login</a>
+		<a href="{% url 'lithubs:login' %}"class="nav-link" style='color:white'>Login</a>
         </li>
         <li class="nav-item">
 	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
