--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -9,8 +9,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+	{% if request.user.is_authenticated %}
         <li class="nav-item">
-	 <a href=""class="nav-link" style='color:white'>Sign up</a>
+	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
+        </li>
+        <li class="nav-item">
+	 <a href="{% url 'lithubs:create-repository' %}"class="nav-link" style='color:white'>Create</a>
+        </li>
+        <li class="nav-item">
+	<a href="{% url 'lithubs:logout' %}" class="nav-link" style='color:white'>Logout</a>
+        </li>
+	{% else %}
+        <li class="nav-item">
+	  <a href="{% url 'lithubs:register' %}" class="nav-link" style='color:white'>Sign up</a>
         </li>
         <li class="nav-item">
 		<a href="{% url 'lithubs:login' %}"class="nav-link" style='color:white'>Login</a>
@@ -18,9 +29,7 @@
         <li class="nav-item">
 	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
         </li>
-        <li class="nav-item">
-	 <a href="{% url 'lithubs:create-repository' %}"class="nav-link" style='color:white'>Create</a>
-        </li>
+	{% endif %}
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
