--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -11,6 +11,9 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 	{% if request.user.is_authenticated %}
         <li class="nav-item">
+	  <a href="{% url 'lithubs:profile' user.id %}"class="nav-link" style='color:white'>{{ user.username }}</a>
+        </li>
+        <li class="nav-item">
 	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
         </li>
         <li class="nav-item">
