--- a/lithubs/static/lithubs/css/styles.css
+++ b/lithubs/static/lithubs/css/styles.css
@@ -3,6 +3,16 @@
 	--secondary-color: #66bfbf;
 }
 
+.nav-profile-img {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+}
+
+.dropdown-item {
+	color:white;
+}
+
 /* main */
 .main {
   margin-top: 15%; 
@@ -152,4 +162,12 @@
 
 #date {
 	text-align: center;
+}
+
+/* profile */
+.profile-img {
+	width: 300px;
+	height: 300px;
+	border-radius: 50%;
+	border: 4px solid white;
 }
