--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -11,17 +11,24 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 	{% if request.user.is_authenticated %}
         <li class="nav-item">
-	  <a href="{% url 'lithubs:profile' user.id %}"class="nav-link" style='color:white'>{{ user.username }}</a>
-        </li>
-        <li class="nav-item">
 	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
         </li>
         <li class="nav-item">
 	 <a href="{% url 'lithubs:create-repository' %}"class="nav-link" style='color:white'>Create</a>
         </li>
-        <li class="nav-item">
-	<a href="{% url 'lithubs:logout' %}" class="nav-link" style='color:white'>Logout</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+		  <img class="nav-profile-img" src="{% static 'lithubs/img/franklin.jpg' %}">
+          </a>
+          <ul class="dropdown-menu" style="background-color: #222831; color:white;">
+	    <li><a style="color: var(--secondary-color)" class="dropdown-item" href="{% url 'lithubs:profile' user.id %}">Profile</a></li>
+            <li><a style="color: var(--secondary-color)" class="dropdown-item" href="#">Repositories</a></li>
+            <li><a style="color: var(--secondary-color)" class="dropdown-item" href="#">⚙️ Settings</a></li>
+            <li><hr class="dropdown-divider"></li>
+	    <li><a style="color:white;"class="dropdown-item" href="{% url 'lithubs:logout' %}">Logout</a></li>
+          </ul>
         </li>
+
 	{% else %}
         <li class="nav-item">
 	  <a href="{% url 'lithubs:register' %}" class="nav-link" style='color:white'>Sign up</a>
