--- a/lithubs/templates/lithubs/profile.html
+++ b/lithubs/templates/lithubs/profile.html
@@ -1,13 +1,17 @@
 {% extends 'lithubs/main.html' %}
+{% load static %}
 
 {% block content %}
 
-
-<h1>{{ user.username }}</h1>
+<div class="profile-wrapper">
+	<div class="profile-img-wrapper">
+	  <img class="profile-img"src="{% static 'lithubs/img/franklin.jpg' %}" alt="avatar">
+	</div>
 
 {% for repo in repos %}
 <p>{{repo.title}}</p>
 
 {% endfor %}
+</div>
 
 {% endblock content %}
