--- a/lithubs/static/lithubs/css/styles.css
+++ b/lithubs/static/lithubs/css/styles.css
@@ -165,9 +165,53 @@
 }
 
 /* profile */
+.profile-wrapper {
+	margin-top: 5%;
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+}
 .profile-img {
+	display: block;
+	margin: 0 auto;
 	width: 300px;
 	height: 300px;
 	border-radius: 50%;
 	border: 4px solid white;
+}
+
+.profile-repo-form-created-grid {
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+}
+
+.profile-repo-container {
+	background-color: var(--primary-color);
+	border: 1px solid white;
+	border-radius: 12px;
+	padding: 12px;
+	font-size: 12px;
+}
+
+
+.profile-repo-container p {
+	color: white;
+}
+
+.profile-name {
+	color: white;
+	text-align: center;
+	font-size: 22px;
+}
+
+#repository-feed-synopsis {
+	color: var(--secondary-color);
+	font-size: 14px;
+}
+
+.repo-feed-img {
+	border: 2px solid white;
+	margin-left: -2%;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
 }
