--- a/lithubs/templates/lithubs/explore.html
+++ b/lithubs/templates/lithubs/explore.html
@@ -8,29 +8,7 @@
   <p class="explore-sub-header">See what's trending in the LitHub community</p>
 </div>
 
-  {% for repo in repos %}
-<div class="explore-feed-wrapper">
-	  <p>@{{ repo.user }}</p>
-	  <p>{{ repo.title }}</p>
-	  <p class="explore-feed-synopsis">{{ repo.synopsis }}</p>
-	  <p>🟠 {{ repo.genre }}</p>
+{% include 'lithubs/repository_feed_component.html' %}
 
-	  <div class="explore-form-created">
-	    <div>
-	      <p>🟣 {{ repo.form }}</p>
-	      {% if request.user == repo.user %}
-	      <a href="{% url 'lithubs:update-repository' repo.id %}">Edit</a>
-	      <a href="{% url 'lithubs:delete-repository' repo.id %}">Delete</a>
-	      {% endif %}
-	    </div>
-
-	    <div>
-	      <p>{{ repo.created|timesince }} ago</p>
-	    </div>
-
-	  </div>
-	</div>
-</div>
-  {% endfor %} 
-
+	
 {% endblock content %}
