--- a/lithubs/templates/lithubs/profile.html
+++ b/lithubs/templates/lithubs/profile.html
@@ -6,12 +6,10 @@
 <div class="profile-wrapper">
 	<div class="profile-img-wrapper">
 	  <img class="profile-img"src="{% static 'lithubs/img/franklin.jpg' %}" alt="avatar">
+	  <h1 class="profile-name">{{ user.username }}</h1>
 	</div>
-
-{% for repo in repos %}
-<p>{{repo.title}}</p>
-
-{% endfor %}
+	
+	{% include 'lithubs/repository_feed_component.html' %}	
 </div>
 
 {% endblock content %}
