--- a/lithubs/templates/lithubs/repository_feed_component.html
+++ b/lithubs/templates/lithubs/repository_feed_component.html
@@ -1,7 +1,7 @@
 {% load static %}
 	<div style="width: 90%; margin:0 auto;"class="">
 		{% for repo in repos %}
-		<div class="profile-repo-container">
+		<div class="feed-repo-container">
 			<p>@{{ repo.user }}</p>
 			<p>{{ repo.title }}</p>
 			<p id="repository-feed-synopsis">{{ repo.synopsis }}</p>
