--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -22,7 +22,7 @@
           </a>
           <ul class="dropdown-menu" style="background-color: #222831; color:white;">
 	    <li><a style="color: var(--secondary-color)" class="dropdown-item" href="{% url 'lithubs:profile' user.id %}">Profile</a></li>
-            <li><a style="color: var(--secondary-color)" class="dropdown-item" href="#">Repositories</a></li>
+	    <li><a style="color: var(--secondary-color)" class="dropdown-item" href="{% url 'lithubs:repositories' user.id %}">Repositories</a></li>
             <li><a style="color: var(--secondary-color)" class="dropdown-item" href="#">⚙️ Settings</a></li>
             <li><hr class="dropdown-divider"></li>
 	    <li><a style="color:white;"class="dropdown-item" href="{% url 'lithubs:logout' %}">Logout</a></li>
