Add favicon to main.html

--- a/lithubs/templates/lithubs/login_register.html
+++ b/lithubs/templates/lithubs/login_register.html
@@ -40,7 +40,7 @@
     </div>
     <div class="form-floating">
       <input style="background-color: #222831; color:white;"type="password" name="password2" class="form-control login-register-form-input" id="floatingPassword" placeholder="Password">
-      <label style="color:white;" class="login-register-form-label"for="floatingPassword">re-type password</label>
+      <label style="color:white;" class="login-register-form-label"for="floatingPassword">confirm</label>
     </div>
     <button style="background-color: purple;"class="w-100 btn btn-lg btn-primary login-register-from-btn" value="Register" type="submit">Sign up</button>
     <p style="text-align:center; color: white; margin-top: 2%;">Already have an account?</p>
