--- a/lithubs/templates/lithubs/main.html
+++ b/lithubs/templates/lithubs/main.html
@@ -5,6 +5,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="icon" type="image/ico" href="{% static 'lithubs/img/parchment.png' %}">
 <title>LitHub</title>
 
 <link rel="stylesheet" href="{% static 'lithubs/css/styles.css' %}">
