Create Room and Message models for disucssion.html

--- a/lithubs/static/lithubs/css/styles.css
+++ b/lithubs/static/lithubs/css/styles.css
@@ -266,4 +266,9 @@
 	margin-top: 5%;
 }
 
-
+/* Discussion */
+.discussion-wrapper {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	color:white;
+}
