--- a/lithubs/static/lithubs/css/styles.css
+++ b/lithubs/static/lithubs/css/styles.css
@@ -267,8 +267,72 @@
 }
 
 /* Discussion */
+.discussion-header-wrapper {
+	margin: 8% auto;	
+	background-color: var(--primary-color);
+	color:white;
+	padding: 20px;
+	border: 1px solid white;
+}
+
+.discussion-header {
+	text-align: center;
+}
+
+.discussion-hr {
+	margin:0 auto;
+	width: 50%;
+}
+
+
+.discussion-sub-header {
+	text-align: center;
+}
 .discussion-wrapper {
+	margin-top: 5%;
+	display: grid;
+	grid-template-columns: 1fr 3fr 1fr;
+	color:white;
+}
+
+.discussion-feed-container {
+	background-color: var(--primary-color);
+	border: 1px solid white;
+	border-radius: 12px;
+	padding: 12px;
+	font-size: 12px;
+	color: white;
+}
+
+.discussion-synopsis {
+	color: var(--secondary-color);
+}
+
+.discussion-create-btn {
+	border: none;
+	font-size: 18px;
+	border-radius: 12px;
+	margin-bottom: 2%;
+	color: var(--secondary-color);
+
+}
+
+.discussion-create-btn a {
+	text-decoration: none;
+
+}
+.form-title-grid {
 	display: grid;
 	grid-template-columns: 1fr 3fr;
-	color:white;
+	color: var(--secondary-color);
+	padding: 12px;
+}
+
+
+.create-room-form {
+	background-color: var(--primary-color);
+	margin:5% auto;
+	width: 70%;
+	border: 1px solid white;
+	border-radius: 12px;
 }
