--- a/lithubs/templates/lithubs/discussion.html
+++ b/lithubs/templates/lithubs/discussion.html
@@ -1,19 +1,34 @@
 {% extends 'lithubs/main.html' %}
 
 {% block content %}
-
+<div class="discussion-header-wrapper">
+  <h1 class="discussion-header">Join the discussion</h1>
+  <hr class="discussion-hr">
+  <p class="discussion-sub-header">Remember to keep your critcism constructive</p>
+</div>
 
 <div class="discussion-wrapper">
+
   <div class="browse-container">
     <p>Browse</p>
   </div>
 
-  <div class="room-container">
-  {% for room in rooms %}
-  <a href="{% url 'lithubs:room' room.id %}">{{ room.name }}</a>
-  <p>{{ room.description }}</p>
-  {% endfor %}
+  <div style="width: 90%; margin:0 auto;"class="">
+    <button class="discussion-create-btn"><a href="{% url 'lithubs:create-room' %}">Post</a></button>
+    {% for room in rooms %}
+      <div class="discussion-feed-container">
+        <p>@{{ room.host }}</p>
+        <a href="{% url 'lithubs:room' room.id %}">{{ room.name }}</a>
+        <p class="discussion-synopsis">{{ room.description }}</p>
+        <p>{{ room.topic }}</p>
+      </div>
+    {% endfor %}
   </div>
+
+  <div>
+    <p style="text-align: center;">Activity</p>
+  </div>
+
 </div>
 
 {% endblock content %}
